--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
+    "dotenv": "^16.4.5",
+    "firebase": "^10.12.3",
     "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -48,9 +50,12 @@
     ]
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "autoprefixer": "^10.4.18",
+    "babel-loader": "^9.1.3",
     "postcss": "^8.4.35",
     "react-router-dom": "^6.22.3",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "webpack": "^5.93.0"
   }
 }
