--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
-    "dotenv": "^16.4.5",
+    "crypto-browserify": "^3.12.1",
+    "dotenv": "^16.4.7",
     "firebase": "^10.12.3",
     "gh-pages": "^6.1.1",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
