--- a/package.json
+++ b/package.json
@@ -9,10 +9,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.6.7",
+    "axios": "^0.27.2",
     "crypto-browserify": "^3.12.1",
     "dotenv": "^16.4.7",
     "firebase": "^10.12.3",
@@ -31,7 +29,7 @@
     "build": "react-scripts build",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -53,9 +51,16 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.26.9",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
     "@svgr/webpack": "^8.1.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
     "autoprefixer": "^10.4.18",
+    "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
+    "jest": "^27.5.1",
     "postcss": "^8.4.35",
     "react-router-dom": "^6.22.3",
     "tailwindcss": "^3.4.1",
