--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-simple-maps": "^3.0.0",
+    "react-toggle-dark-mode": "^1.1.1",
     "react-tooltip": "^5.26.3",
     "web-vitals": "^2.1.4"
   },
